tests/sksl/errors/CallNonFunction.glsl
### Compilation failed:

error: 3: not a function
1 error
